<resources>
    <string name="app_name">Lexical Analyzer</string>
    <string name="togglebutton">ON</string>
    <string name="your_speech_here">Your Speech Here...</string>
    <string name="record">RECORD</string>
    <string name="finish">FINISH</string>
    <string name="analyze">Analyze</string>
    <string name="refresh">Refresh</string>
    <string name="textview">TextView</string>
    <string-array name="dictionairies">

        <item>New-GSL</item>
        <item>General Service List</item>
        <item>Academic Vocabulary List</item>
        <item>Academic Word List</item>
        <item>Academic Collocation List</item>
        <item>Discourse Connectors</item>
        <item>Phrasal Verbs</item>
    </string-array>

    <string name="title_activity_the_project">TheProject</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="contact"><strong>Location : </strong> <br/><br/>Department of Foreign Language, Faculty of Education, Maltepe University, <br/><br/> Istanbul-Turkey <br/><br/> <strong>Mail Us : </strong>  <br/><br/> info@lexicalanalyzer.com  <br/><br/>
        <strong>Call Us : </strong> <br/><br/>+90 216 626 1050 (EXT.2230)</string>
</resources>
